--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "install": "^0.13.0",
+    "mongoose": "^9.0.0",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.11",
     "npm": "^11.6.4"
